Added max hight on first row of main grid, added other resizing limitations, added headers for windows

--- a/Sklad/ItemFormWindow.xaml
+++ b/Sklad/ItemFormWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Sklad"
         mc:Ignorable="d"
-        Title="ItemFormWindow" Height="450" Width="800">
+        Title="Upravit položku" Height="450" Width="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
