--- a/Sklad/MainWindow.xaml
+++ b/Sklad/MainWindow.xaml
@@ -23,7 +23,7 @@
         <TextBlock Text="Náhradní díly" FontSize="16" FontWeight="Bold" Margin="134,10,0,0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!-- Tabulka pro náhradní díly -->
-        <DataGrid x:Name="SparePartsGrid" Grid.Column="0" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" Grid.ColumnSpan="2">
+        <DataGrid x:Name="SparePartsGrid" Grid.Column="0" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" Grid.ColumnSpan="2" MouseLeftButtonDown="ChangeMouseDil">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Název" Binding="{Binding Name}" Width="Auto">
                     <DataGridTextColumn.HeaderStyle>
@@ -107,7 +107,7 @@
         <TextBlock Text="Spotřební materiál" FontSize="16" FontWeight="Bold" Margin="0,10,0,0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
         <!-- Tabulka pro spotřební materiál -->
-        <DataGrid x:Name="ConsumablesGrid" Grid.Column="2" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionChanged="ChangeSpotrebak">
+        <DataGrid x:Name="ConsumablesGrid" Grid.Column="2" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionChanged="ChangeSpotrebak" MouseLeftButtonDown="ChangeMouseSpotrebak">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Název" Binding="{Binding Name}" Width="Auto">
                     <DataGridTextColumn.HeaderStyle>
