--- a/Sklad/MainWindow.xaml
+++ b/Sklad/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Sklad"
         mc:Ignorable="d"
-        Title="Sklad SZP LKKB" Height="768" Width="1024" MaxWidth="1980" MaxHeight="1024">
+        Title="Sklad SZP LKKB" Height="768" Width="1024" MaxWidth="1980" MaxHeight="1024" Background="#FFA7A7A7">
     <Grid Margin="0,0,0,-236">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" MaxHeight="600"/>
@@ -14,16 +14,17 @@
             <!-- Pro tlačítka -->
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="13*" />
-            <ColumnDefinition Width="87*"/>
-            <ColumnDefinition Width="100*" />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="64*"/>
+            <ColumnDefinition Width="445*"/>
+            <ColumnDefinition Width="512*" />
         </Grid.ColumnDefinitions>
 
         <!-- Text pro náhradní díly -->
-        <TextBlock Text="Náhradní díly" FontSize="16" FontWeight="Bold" Margin="134,10,0,0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock Text="Náhradní díly" FontSize="16" FontWeight="Bold" Margin="134,10,0,0" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!-- Tabulka pro náhradní díly -->
-        <DataGrid x:Name="SparePartsGrid" Grid.Column="0" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" Grid.ColumnSpan="2" MouseLeftButtonDown="ChangeMouseDil">
+        <DataGrid x:Name="SparePartsGrid" Grid.Column="1" Margin="7,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" Grid.ColumnSpan="2" MouseLeftButtonDown="ChangeMouseDil">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Název" Binding="{Binding Name}" Width="Auto">
                     <DataGridTextColumn.HeaderStyle>
@@ -104,10 +105,10 @@
         </DataGrid>
 
         <!-- Text pro spotřební materiál -->
-        <TextBlock Text="Spotřební materiál" FontSize="16" FontWeight="Bold" Margin="0,10,0,0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock Text="Spotřební materiál" FontSize="16" FontWeight="Bold" Margin="0,10,0,0" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
         <!-- Tabulka pro spotřební materiál -->
-        <DataGrid x:Name="ConsumablesGrid" Grid.Column="2" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionChanged="ChangeSpotrebak" MouseLeftButtonDown="ChangeMouseSpotrebak">
+        <DataGrid x:Name="ConsumablesGrid" Grid.Column="3" Margin="10,50,10,10" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" SelectionChanged="ChangeSpotrebak" MouseLeftButtonDown="ChangeMouseSpotrebak">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Název" Binding="{Binding Name}" Width="Auto">
                     <DataGridTextColumn.HeaderStyle>
@@ -189,10 +190,28 @@
 
 
         <!-- Tlačítka pod tabulkami (umístěná v novém řádku) -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="275,10,0,10" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Content="Přidat položku" Width="150" Click="AddItemButton_Click" Margin="5"/>
-            <Button Content="Upravit položku" Width="150" Margin="5" Click="EditItemButton_Click"/>
-            <Button Content="Historie položky" Width="150" Margin="5" Click="ShowHistoryButton_Click"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="205,10,0,10" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="2">
+            <Button Content="Přidat položku" Width="150" Click="AddItemButton_Click" Margin="5" FontWeight="Bold" FontSize="14">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button Content="Upravit položku" Width="150" Margin="5" Click="EditItemButton_Click" FontWeight="Bold" FontSize="14">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button Content="Historie položky" Width="150" Margin="5" Click="ShowHistoryButton_Click" FontWeight="Bold" FontSize="14">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </StackPanel>
 
     </Grid>
