--- a/Sklad/ItemFormWindow.xaml
+++ b/Sklad/ItemFormWindow.xaml
@@ -16,6 +16,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Název -->
@@ -48,9 +50,17 @@
         <!-- Umístění -->
         <TextBlock Text="Důvod změny:" Grid.Row="6" VerticalAlignment="Center"/>
         <TextBox x:Name="CommentTextBox" Grid.Row="6" Margin="100,0,0,5" Width="200" KeyDown="CommentDown"/>
-        
+
+        <!-- Sklad MU -->
+        <TextBlock Text="Sklad MU:" Grid.Row="7" VerticalAlignment="Center"/>
+        <TextBox x:Name="MaterialUnitTextBox" Grid.Row="7" Margin="100,0,0,5" Width="200" />
+
+        <!-- Seriové číslo -->
+        <TextBlock Text="Seriové číslo:" Grid.Row="8" VerticalAlignment="Center"/>
+        <TextBox x:Name="SerialNumberTextBox" Grid.Row="8" Margin="100,0,0,5" Width="200"/>
+
         <!-- Tlačítka -->
-        <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+        <StackPanel Grid.Row="9" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Button Content="Uložit" Width="100" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Zrušit" Width="100" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
