--- a/Sklad/NewItemForm.xaml
+++ b/Sklad/NewItemForm.xaml
@@ -15,6 +15,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Název -->
@@ -43,9 +45,17 @@
         <!-- Umístění -->
         <TextBlock Text="Umístění:" Grid.Row="5" VerticalAlignment="Center"/>
         <TextBox x:Name="LocationTextBox" Grid.Row="5" Margin="100,0,0,5" Width="200" KeyDown="LocationDown"/>
+        
+        <!-- Sklad MU -->
+        <TextBlock Text="Sklad MU:" Grid.Row="6" VerticalAlignment="Center"/>
+        <TextBox x:Name="MaterialUnitTextBox" Grid.Row="6" Margin="100,0,0,5" Width="200" />
+
+        <!-- Seriové číslo -->
+        <TextBlock Text="Seriové číslo:" Grid.Row="7" VerticalAlignment="Center"/>
+        <TextBox x:Name="SerialNumberTextBox" Grid.Row="7" Margin="100,0,0,5" Width="200"/>
 
         <!-- Tlačítka -->
-        <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+        <StackPanel Grid.Row="8" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Button Content="Uložit" Width="100" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Zrušit" Width="100" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
